tests/integration/features/document_fragments/_validations/02_document_file_must_be_included_once/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: [DOCUMENT_FROM_FILE]: A multiple inclusion of a document is detected. A document can be only included once: nested.sdoc.
